[package]
name = "raydium-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
serde_json = "1.0.114"
solana-client = "1.18.6"
solana-sdk = "1.18.6"
tokio = {version="1.36.0", features = ["full"] }
tokio-tungstenite = { version="*", features=["native-tls"] }
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
solana-transaction-status = "1.18.6"
